# llm-readability

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: dom.rs  encoded_html.rs  error.rs  extractor.rs  lib.rs  scorer.rs
